--- a/index.html
+++ b/index.html
@@ -87,24 +87,22 @@
 <body>
   <div class="container">
     <h1>Global Statistics</h1>
-    <h2>Introduction</h2>
+    <h1>Introduction</h1>
     <p>In this visualization, the aim is to create a compelling and informative representation of global statistics, covering a wide range of key indicators such as the Consumer Price Index (CPI), life expectancy, and more. Through vivid charts, graphs, and interactive elements, it intends to offer viewers a clear and engaging insight into the evolving trends and patterns that shape our world. By visually connecting data points and highlighting global disparities and progress, this visualization will empower individuals to better understand and appreciate the complex dynamics of our global society, fostering a deeper awareness of the challenges and opportunities that lie ahead.</p>
 
     <!-- Text above the map chart -->
-    <div id="chart-text-above">
-      <h2>Global CPI Trends</h2>
-      <p>The Consumer Price Index (CPI) values vary significantly across the world, reflecting the diverse economic conditions and cost of living in different countries. From high-cost regions in Western Europe and North America to more affordable areas in Asia and Africa, CPI serves as a vital benchmark for measuring inflation and gauging the purchasing power of consumers. These values not only influence economic policies but also impact the everyday lives of people, determining the affordability of goods and services in their respective regions. Understanding these global CPI variations is essential for businesses, policymakers, and individuals alike to make informed decisions and adapt to changing economic landscapes.</p>
-    </div>
-
-    <div id="vis"></div>
-
-    <!-- Text between the charts -->
-    <div id="chart-text">
-      <h2>Infant Mortality Rate vs Life Expectancy</h2>
-      <p>Infant Mortality Rate (IMR) and Life Expectancy are two crucial demographic indicators that provide valuable insights into a nation's overall health and well-being. IMR reflects the number of infant deaths per 1,000 live births, highlighting a country's healthcare infrastructure and maternal and child care programs. Conversely, Life Expectancy signifies the average number of years a person can expect to live, indicating the overall quality of life and healthcare access. There is a strong correlation between these two metrics – lower IMR typically corresponds to higher life expectancy, demonstrating the importance of effective healthcare systems and public health initiatives in extending and improving the lives of a nation's citizens. Understanding the relationship between IMR and Life Expectancy is pivotal for policymakers in their efforts to enhance the overall health and longevity of their populations.</p>
-    </div>
-
-    <div id="vis2"></div>
+      <div id="chart-text-above">
+        <h2>Global CPI Trends</h2>
+        <p>The Consumer Price Index (CPI) values vary significantly across the world, reflecting the diverse economic conditions and cost of living in different countries. From high-cost regions in Western Europe and North America to more affordable areas in Asia and Africa, CPI serves as a vital benchmark for measuring inflation and gauging the purchasing power of consumers. These values not only influence economic policies but also impact the everyday lives of people, determining the affordability of goods and services in their respective regions. Understanding these global CPI variations is essential for businesses, policymakers, and individuals alike to make informed decisions and adapt to changing economic landscapes.</p>
+      <div id="vis"></div>
+      <div id="chart-text">
+        <h2>Infant Mortality Rate vs Life Expectancy</h2>
+        <p>Infant Mortality Rate (IMR) and Life Expectancy are two crucial demographic indicators that provide valuable insights into a nation's overall health and well-being. IMR reflects the number of infant deaths per 1,000 live births, highlighting a country's healthcare infrastructure and maternal and child care programs. Conversely, Life Expectancy signifies the average number of years a person can expect to live, indicating the overall quality of life and healthcare access. There is a strong correlation between these two metrics – lower IMR typically corresponds to higher life expectancy, demonstrating the importance of effective healthcare systems and public health initiatives in extending and improving the lives of a nation's citizens. Understanding the relationship between IMR and Life Expectancy is pivotal for policymakers in their efforts to enhance the overall health and longevity of their populations.</p>
+      <div id="vis2"></div>
+      <div id="chart-text-above2">
+        <h2>Percentage Of Language Spoken as Official Language In The World</h2>
+        <p>The "Percentage Of Languages Spoken as Official Language In The World" is a compelling visualization that offers valuable insights into the linguistic diversity of our global society. By aggregating data on official languages from various countries, it showcases the distribution and prevalence of different languages on a worldwide scale. Through a visually engaging pie chart, viewers can gain a deeper understanding of the significance of languages in shaping cultural identities and political landscapes. This visualization underscores the rich tapestry of languages spoken globally, highlighting the importance of multilingualism and cultural preservation. It serves as a reminder of the diversity that enriches our world and the role language plays in fostering cross-cultural communication and understanding.</p>
+      <div id="vis3"></div>
   </div>
 
   <script type="text/javascript">
@@ -177,93 +175,147 @@
 
   <script type="text/javascript">
     var spec = {
-      "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-      "width": 900,
-      "height": 550,
-      "title": "Infant Mortality Rate vs. Life Expectancy",
-      "data": {
-        "url": "https://raw.githubusercontent.com/thienyew/A-Comprehensive-Overview-of-Global-Trends/main/world-data-2023.csv"
-      },
-      "transform": [
-        {
-          "filter": {
-            "selection": "countrySelector",
-            "oneOf": ["All"]  // Include "All" option to clear the filter
+        "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+        "width": 900,
+        "height": 550,
+        "title": "INFANT MORTALITY RATE VS LIFE EXPECTANCY",
+        "data": {
+          "url": "https://raw.githubusercontent.com/thienyew/A-Comprehensive-Overview-of-Global-Trends/main/world-data-2023.csv"
+        },
+        "transform": [
+          {
+            "filter": {
+              "selection": "countrySelector",
+              "oneOf": ["All"]  // Include "All" option to clear the filter
+            }
           }
-        }
-      ],
-      "selection": {
-        "countrySelector": {
-          "type": "multi",  // Allows selecting multiple countries
-          "fields": ["Country"],
-          "bind": {
-            "input": "select",
-            "options": [
-              "All", // Add "All" option to clear the filter
-              "Afghanistan", "Albania", "Algeria", "Andorra", "Angola", "Antigua and Barbuda", "Argentina", "Armenia", "Australia", "Austria", "Azerbaijan",
-              "The Bahamas", "Bahrain", "Bangladesh", "Barbados", "Belarus", "Belgium", "Belize", "Benin", "Bhutan", "Bolivia", "Bosnia and Herzegovina",
-              "Botswana", "Brazil", "Brunei", "Bulgaria", "Burkina Faso", "Burundi", "Ivory Coast", "Cape Verde", "Cambodia", "Cameroon", "Canada",
-              "Central African Republic", "Chad", "Chile", "China", "Colombia", "Comoros", "Republic of the Congo", "Costa Rica", "Croatia", "Cuba",
-              "Cyprus", "Czech Republic", "Democratic Republic of the Congo", "Denmark", "Djibouti", "Dominica", "Dominican Republic", "Ecuador", "Egypt",
-              "El Salvador", "Equatorial Guinea", "Eritrea", "Estonia", "Eswatini", "Ethiopia", "Fiji", "Finland", "France", "Gabon", "The Gambia",
-              "Georgia", "Germany", "Ghana", "Greece", "Grenada", "Guatemala", "Guinea", "Guinea-Bissau", "Guyana", "Haiti", "Vatican City", "Honduras",
-              "Hungary", "Iceland", "India", "Indonesia", "Iran", "Iraq", "Republic of Ireland", "Israel", "Italy", "Jamaica", "Japan", "Jordan", "Kazakhstan",
-              "Kenya", "Kiribati", "Kuwait", "Kyrgyzstan", "Laos", "Latvia", "Lebanon", "Lesotho", "Liberia", "Libya", "Liechtenstein", "Lithuania", "Luxembourg",
-              "Madagascar", "Malawi", "Malaysia", "Maldives", "Mali", "Malta", "Marshall Islands", "Mauritania", "Mauritius", "Mexico", "Federated States of Micronesia",
-              "Moldova", "Monaco", "Mongolia", "Montenegro", "Morocco", "Mozambique", "Myanmar", "Namibia", "Nauru", "Nepal", "Netherlands", "New Zealand", "Nicaragua",
-              "Niger", "Nigeria", "North Korea", "North Macedonia", "Norway", "Oman", "Pakistan", "Palau", "Palestinian National Authority", "Panama", "Papua New Guinea",
-              "Paraguay", "Peru", "Philippines", "Poland", "Portugal", "Qatar", "Romania", "Russia", "Rwanda", "Saint Kitts and Nevis", "Saint Lucia", "Saint Vincent and the Grenadines",
-              "Samoa", "San Marino", "Sao Tome and Principe", "Saudi Arabia", "Senegal", "Serbia", "Seychelles", "Sierra Leone", "Singapore", "Slovakia", "Slovenia",
-              "Solomon Islands", "Somalia", "South Africa", "South Korea", "South Sudan", "Spain", "Sri Lanka", "Sudan", "Suriname", "Sweden", "Switzerland", "Syria",
-              "Tajikistan", "Tanzania", "Thailand", "East Timor", "Togo", "Tonga", "Trinidad and Tobago", "Tunisia", "Turkey", "Turkmenistan", "Tuvalu", "Uganda", "Ukraine",
-              "United Arab Emirates", "United Kingdom", "United States of America", "Uruguay", "Uzbekistan", "Vanuatu", "Venezuela", "Vietnam", "Yemen", "Zambia", "Zimbabwe"
-              /* Add all countries here */
-            ],
-            "name": "Select Countries"
+        ],
+        "selection": {
+          "countrySelector": {
+            "type": "multi",  // Allows selecting multiple countries
+            "fields": ["Country"],
+            "bind": {
+              "input": "select",
+              "options": [
+                "All", // Add "All" option to clear the filter
+                "Afghanistan", "Albania", "Algeria", "Andorra", "Angola", "Antigua and Barbuda", "Argentina", "Armenia", "Australia", "Austria", "Azerbaijan",
+                "The Bahamas", "Bahrain", "Bangladesh", "Barbados", "Belarus", "Belgium", "Belize", "Benin", "Bhutan", "Bolivia", "Bosnia and Herzegovina",
+                "Botswana", "Brazil", "Brunei", "Bulgaria", "Burkina Faso", "Burundi", "Ivory Coast", "Cape Verde", "Cambodia", "Cameroon", "Canada",
+                "Central African Republic", "Chad", "Chile", "China", "Colombia", "Comoros", "Republic of the Congo", "Costa Rica", "Croatia", "Cuba",
+                "Cyprus", "Czech Republic", "Democratic Republic of the Congo", "Denmark", "Djibouti", "Dominica", "Dominican Republic", "Ecuador", "Egypt",
+                "El Salvador", "Equatorial Guinea", "Eritrea", "Estonia", "Eswatini", "Ethiopia", "Fiji", "Finland", "France", "Gabon", "The Gambia",
+                "Georgia", "Germany", "Ghana", "Greece", "Grenada", "Guatemala", "Guinea", "Guinea-Bissau", "Guyana", "Haiti", "Vatican City", "Honduras",
+                "Hungary", "Iceland", "India", "Indonesia", "Iran", "Iraq", "Republic of Ireland", "Israel", "Italy", "Jamaica", "Japan", "Jordan", "Kazakhstan",
+                "Kenya", "Kiribati", "Kuwait", "Kyrgyzstan", "Laos", "Latvia", "Lebanon", "Lesotho", "Liberia", "Libya", "Liechtenstein", "Lithuania", "Luxembourg",
+                "Madagascar", "Malawi", "Malaysia", "Maldives", "Mali", "Malta", "Marshall Islands", "Mauritania", "Mauritius", "Mexico", "Federated States of Micronesia",
+                "Moldova", "Monaco", "Mongolia", "Montenegro", "Morocco", "Mozambique", "Myanmar", "Namibia", "Nauru", "Nepal", "Netherlands", "New Zealand", "Nicaragua",
+                "Niger", "Nigeria", "North Korea", "North Macedonia", "Norway", "Oman", "Pakistan", "Palau", "Palestinian National Authority", "Panama", "Papua New Guinea",
+                "Paraguay", "Peru", "Philippines", "Poland", "Portugal", "Qatar", "Romania", "Russia", "Rwanda", "Saint Kitts and Nevis", "Saint Lucia", "Saint Vincent and the Grenadines",
+                "Samoa", "San Marino", "Sao Tome and Principe", "Saudi Arabia", "Senegal", "Serbia", "Seychelles", "Sierra Leone", "Singapore", "Slovakia", "Slovenia",
+                "Solomon Islands", "Somalia", "South Africa", "South Korea", "South Sudan", "Spain", "Sri Lanka", "Sudan", "Suriname", "Sweden", "Switzerland", "Syria",
+                "Tajikistan", "Tanzania", "Thailand", "East Timor", "Togo", "Tonga", "Trinidad and Tobago", "Tunisia", "Turkey", "Turkmenistan", "Tuvalu", "Uganda", "Ukraine",
+                "United Arab Emirates", "United Kingdom", "United States of America", "Uruguay", "Uzbekistan", "Vanuatu", "Venezuela", "Vietnam", "Yemen", "Zambia", "Zimbabwe"
+                /* Add all countries here */
+              ],
+              "name": "Select Countries"
+            }
           }
-        }
-      },
-      "mark": {
-        "type": "circle",
-        "tooltip": true
-      },
-      "encoding": {
-        "x": {
-          "field": "Infant mortality",
-          "type": "quantitative",
-          "title": "Infant Mortality Rate"
         },
-        "y": {
-          "field": "Life expectancy",
-          "type": "quantitative",
-          "title": "Life Expectancy"
+        "mark": {
+          "type": "circle",
+          "tooltip": true
         },
-        "size": {
-          "value": 100
+        "encoding": {
+          "x": {
+            "field": "Infant mortality",
+            "type": "quantitative",
+            "title": "Infant Mortality Rate"
+          },
+          "y": {
+            "field": "Life expectancy",
+            "type": "quantitative",
+            "title": "Life Expectancy"
+          },
+          "size": {
+            "value": 100
+          },
+          "color": {
+            "field": "Country",
+            "type": "nominal"
+          }
         },
-        "color": {
-          "field": "Country",
-          "type": "nominal"
-        }
-      },
-      "config": {
-        "range": {
-          "category": {
-            "scheme": "category20"  // Customize the color scheme if needed
+        "config": {
+          "range": {
+            "category": {
+              "scheme": "category20"  // Customize the color scheme if needed
+            }
           }
         }
       }
+      var opt = {
+        "renderer": "canvas",
+        "actions": false
+      };
+      vegaEmbed('#vis2', spec, opt);
+    </script>
+
+    <script type="text/javascript">
+      var spec = {
+    "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+    "data": {
+      "url": "https://raw.githubusercontent.com/thienyew/A-Comprehensive-Overview-of-Global-Trends/main/world-data-2023.csv",
+      "format": {"type": "csv"}
+    },
+    "transform": [
+      {
+        "aggregate": [{ "op": "count", "as": "Count" }],
+        "groupby": ["Official language"]
+      },
+      {
+        "filter": "datum.Count > 1"  // Filter languages spoken by multiple countries
+      },
+      {
+        "calculate": "round(datum.Count / 223 * 100)",  // Calculate and round the percentage
+        "as": "Percentage"
+      }
+    ],
+    "mark": "arc",
+    "encoding": {
+      "theta": {
+        "field": "Count",
+        "type": "quantitative",
+        "stack": true,
+        "title": "Percentage of Countries"
+      },
+      "color": {
+        "field": "Official language",
+        "type": "nominal",
+        "title": "Official Language"
+      },
+      "tooltip": [
+        {"field": "Official language", "type": "nominal", "title": "Official Language:"},
+        {"field": "Count", "type": "quantitative", "title": "Number of Countries:"},
+        {"field": "Percentage", "type": "quantitative", "title": "Percentage in the world:"}
+      ]
+    },
+    "title": "PERCENTAGE OF LANGUAGES SPOKEN AS OFFICIAL LANGUAGE IN THE WORLD",
+    "width": 800,
+    "height": 400,
+    "config": {
+      "background": "#F0FFF0"  // Set background color
     }
+  }
     var opt = {
       "renderer": "canvas",
       "actions": false
     };
-    vegaEmbed('#vis2', spec, opt);
+    vegaEmbed('#vis3', spec, opt);
   </script>
+
 </body>
 
 <footer>
-  <p>&copy; 2023 Your Website Name</p>
+  <p>&copy; TohThienYew FIT3179 Data Visualisation 2</p>
 </footer>
 
 </html>
